# rgb

./: Cargo.toml  DESIGN.md  README.md
src/: lib.rs  main.rs
src/app/: mod.rs  test.rs
src/config/: mod.rs
src/git/: mod.rs
src/layout/: mod.rs
src/monitor/: mod.rs
src/terminal/: mod.rs
src/ui/: mod.rs
src/ui/components/: commit_dialog.rs  file_tree.rs  git_status.rs  mod.rs
src/ui/widgets/: mod.rs
src/workspace/: mod.rs
