[package]
name = "rgb"
version = "0.1.0"
edition = "2021"
authors = ["RGB Contributors"]
description = "Rust Good Vibes - A terminal multiplexer and workspace manager"
license = "MIT"
repository = "https://github.com/yourusername/rgb"
keywords = ["terminal", "multiplexer", "tui", "workspace", "git"]
categories = ["command-line-utilities"]

[dependencies]
# TUI Framework
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Terminal Emulation
alacritty_terminal = "0.24"
libc = "0.2"

# Async Runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Git Integration
git2 = { version = "0.19", features = ["vendored-libgit2"] }

# File System Monitoring
notify = "6.1"
notify-debouncer-full = "0.3"

# CLI and Configuration
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.14"
toml = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling and Logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
directories = "5.0"
dirs = "5.0"
once_cell = "1.20"
arc-swap = "1.7"
parking_lot = "0.12"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Terminal utilities
termion = "4.0"
unicode-width = "0.2"
unicode-segmentation = "1.11"
regex = "1.11"

[dev-dependencies]
tempfile = "3.12"
pretty_assertions = "1.4"
mockito = "1.5"
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true

